versions/v2.9/modules/en/pages/cluster-admin/kubernetes-resources/workloads-and-pods/add-a-sidecar.adoc
= Adding a Sidecar
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/add-a-sidecar.adoc 
:product-path: cluster-admin/kubernetes-resources/workloads-and-pods/add-a-sidecar.adoc
ifeval::["{build-type}" != "community"]
:xref-deploy-workloads: xref:cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-deploy-workloads: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/deploy-workloads.adoc
endif::[]

A _sidecar_ is a container that extends or enhances the main container in a pod. The main container and the sidecar share a pod, and therefore share the same network space and storage. You can add sidecars to existing workloads by using the *Add a Sidecar* option.

. In the upper left corner, click *☰ > Cluster Management*.
. Go to the cluster where you want to add a sidecar and click *Explore*.
. In the left navigation bar, click *Workload*.
. Find the workload that you want to extend. Select *⋮ > + Add Sidecar*.
. Enter a *Name* for the sidecar.
. In the *General* section, select a sidecar type. This option determines if the sidecar container is deployed before or after the main container is deployed.
 ** *Standard Container:*
+
The sidecar container is deployed after the main container.

 ** *Init Container:*
+
The sidecar container is deployed before the main container.
. From the *Container Image* field, enter the name of the container image that you want to deploy in support of the main container. During deployment, Rancher pulls this image from https://hub.docker.com/explore/[Docker Hub]. Enter the name exactly as it appears on Docker Hub.
. Set the remaining options. You can read about them in {xref-deploy-workloads}[Deploying Workloads].
. Click *Launch*.

*Result:* The sidecar is deployed according to your parameters. Following its deployment, you can view the sidecar by selecting *⋮ icon (...) > Edit* for the main deployment.

== Related Links

* https://kubernetes.io/blog/2015/06/the-distributed-system-toolkit-patterns/[The Distributed System ToolKit: Patterns for Composite Containers]
